--- a/src/Page/Steper/Stepper.css
+++ b/src/Page/Steper/Stepper.css
@@ -23,7 +23,8 @@ a:hover {
   text-align: center;
   color: #666;
   cursor: default;
-  margin: 0 3px;
+  margin: 0 3px 10px 0px;
+
   padding: 10px 10px 10px 30px;
   min-width: 140px;
   float: left;
