first page changes theme changes

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   background-color: #F3F5F9;
   overflow-x: hidden;
@@ -11,7 +10,7 @@ body {
 }
 
 .second {
-  color: #3951BA;
+  color: #FFFFFF;
 }
 
 /* Custom scrollbar */
