--- a/src/Page/Steper/Stepper.css
+++ b/src/Page/Steper/Stepper.css
@@ -29,7 +29,7 @@ a:hover {
   min-width: 140px;
   float: left;
   position: relative;
-  background-color: #d9e3f7;
+  background-color: #E0E0E0;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -47,7 +47,7 @@ a:hover {
   height: 0;
   border-top: 18px solid transparent;
   border-bottom: 24px solid transparent;
-  border-left: 18px solid #d9e3f7;
+  border-left: 18px solid #E0E0E0;
   z-index: 2;
   transition: border-color 0.2s ease;
 }
@@ -74,6 +74,7 @@ a:hover {
 
 .arrow-steps .step span:before {
   opacity: 0;
+  /* color: #9094A5; */
   content: "✔";
   position: absolute;
   top: -2px;
@@ -90,11 +91,11 @@ a:hover {
 
 .arrow-steps .step.current {
   color: #fff;
-  background-color: #3951BA;
+  background-color: #9094A5;
 }
 
 .arrow-steps .step.current:after {
-  border-left: 17px solid #3951BA;
+  border-left: 17px solid #9094A5;
 }
 
 
@@ -146,11 +147,11 @@ a:hover {
 }
 
 .modal-btn.cancel {
-  background-color: #f5f5f5;
+  background-color: #E0E0E0;
   color: #333;
 }
 
 .modal-btn.confirm {
-  background-color: #3951BA;
+  background-color: #bdc0cdde;
   color: white;
 }
